# glimpse

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
glimpse_server/: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
glimpse_server/src/: controller.cpp  controller.h  main.cpp  room.cpp  room.h  room_manager.cpp  room_manager.h  user.h  ws_manager.cpp  ws_manager.h
glimpse_web/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
glimpse_web/src/app/: globals.css  layout.tsx  page.tsx
glimpse_web/src/app/join_room/: page.tsx
glimpse_web/src/app/new/: page.tsx
glimpse_web/src/app/new_room/: page.tsx
glimpse_web/src/app/room/: Connection.ts  Main.tsx  MainVideo.tsx  MiniVideo.tsx  Video.tsx  page.tsx
glimpse_web/src/utils/: api.ts
